--- a/index.css
+++ b/index.css
@@ -1,10 +1,64 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+}
+
+.wrapper {
+  height: 100vh;
+}
+
+.content {
+  max-width: 1000px;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 700;
+  color: #343a40;
+  margin-bottom: 10px;
+}
+
+.description {
+  margin-bottom: 20px;
+  color: #adb5bd;
+}
+
 .range-container {
   position: relative;
 }
 
-.values-container {
+.range-labels {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 5px;
+  color: #6c757d;
+}
+
+.label {
+  font-weight: 500;
+}
+
+.range-values {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.value {
+  font-weight: 700;
 }
 
 input[type="range"] {
@@ -13,7 +67,7 @@ input[type="range"] {
   width: 100%;
   height: 10px;
   padding: 0;
-  border-radius: 2px;
+  border-radius: 8px;
   outline: none;
   cursor: pointer;
   background: linear-gradient(
@@ -22,7 +76,6 @@ input[type="range"] {
     rgba(251, 212, 156, 1) 50%,
     rgba(231, 148, 31, 1) 100%
   );
-  transition: all 1.5s;
 }
 
 /*Chrome thumb*/
@@ -33,21 +86,11 @@ input[type="range"]::-webkit-slider-thumb {
   -moz-appearance: none;
   -webkit-border-radius: 5px;
   /*16x16px adjusted to be same as 14x14px on moz*/
-  height: 16px;
-  width: 16px;
+  height: 20px;
+  width: 30px;
   border-radius: 5px;
-  background: #e7e7e7;
+  background: url("./thumb.svg") center no-repeat;
+  background-color: #e9ecef;
+  background-size: contain;
   border: 1px solid #c5c5c5;
-}
-
-input[type="range"]::-webkit-slider-thumb::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  width: 10px;
-  height: 10px;
-  border: 10px solid black;
-  border-radius: 5px;
 }
